SUBDIRS = src . tests

# Copy extra distribution files
docdir = $(datadir)/doc/$(PACKAGE)
doc_DATA = ChangeLog NEWS README COPYING

# Copy public domain examples
examples = examples/15PUZZLE \
	   examples/BLINKY \
	   examples/BLITZ \
	   examples/BRIX \
	   examples/CONNECT4 \
	   examples/GUESS \
	   examples/HIDDEN \
	   examples/INVADERS \
	   examples/KALEID \
	   examples/MAZE \
	   examples/MERLIN \
	   examples/MISSILE \
	   examples/PONG \
	   examples/PONG2 \
	   examples/PUZZLE \
	   examples/SYZYGY \
	   examples/TANK \
	   examples/TETRIS \
	   examples/TICTAC \
	   examples/UFO \
	   examples/VBRIX \
	   examples/VERS \
	   examples/WIPEOFF
examplesdir = $(datadir)/doc/$(PACKAGE)/roms
examples_DATA = $(examples)
